--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/sinon": "5.0.7",
     "chai": "4.2.0",
     "mocha": "5.2.0",
+    "mixin-deep": "1.3.2",
     "puppeteer": "1.10.0",
     "sinon": "7.1.1",
     "typescript": "3.1.6"
